dataset1235/2025-2/1379599236/users/3062747507/executions/2110095464_1934415188.log
== SUBMISSION (2025-08-25 19:30:29)
-- CODE: 
m = flaot(input())
l = float(input())
c = m/l
print(round(c, 3), "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:30:30)
-- CODE: 
m = flaot(input())
l = float(input())
c = m/l
print(round(c, 3), "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:31:09)
-- CODE: 
km = flaot(input())
l = float(input())
cm = km/l
print(round(cm, 3), "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:31:34)
-- CODE: 
km = float(input())
l = float(input())
cm = km/l
print(round(cm, 3), "km/l")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
2.0 km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
5.0 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:31:11)
-- CODE: 
km = flaot(input())
l = float(input())
cm = km/l
print(round(cm, 3), "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = flaot(input())
         ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:29:40)
-- CODE: 
m = flaot(input())
l = float(input())
c = m/l
print(round(c,3) , "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:30:02)
-- CODE: 
m = flaot(input())
l = float(input())
c = m/l
print(round(c,3), "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:29:41)
-- CODE: 
m = flaot(input())
l = float(input())
c = m/l
print(round(c,3) , "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:28:05)
-- CODE: 
m = flaot(input())
l = float(input())
c = m/l
print(round(c,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:29:42)
-- CODE: 
m = flaot(input())
l = float(input())
c = m/l
print(round(c,3) , "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:29:47)
-- CODE: 
m = flaot(input())
l = float(input())
c = m/l
print(round(c,3) , "km/l")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = flaot(input())
        ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
